--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -22,10 +22,10 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/restaurant_item_image"
         android:layout_marginBottom="4dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="-2dp"
-        android:layout_toLeftOf="@+id/restaurant_item_price"
-        android:layout_toRightOf="@+id/restaurant_item_image"
+        android:layout_toStartOf="@+id/restaurant_item_price"
+        android:layout_toEndOf="@+id/restaurant_item_image"
         android:ellipsize="end"
         android:maxLines="1"
         tools:text="Foo's Bar" />
@@ -35,7 +35,7 @@
         style="@style/Widget.MaterialRatingBar.RatingBar.Indicator.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/restaurant_item_name"
+        android:layout_alignStart="@+id/restaurant_item_name"
         android:layout_below="@+id/restaurant_item_name"
         android:layout_marginBottom="4dp" />
 
@@ -46,8 +46,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/restaurant_item_rating"
         android:layout_alignTop="@+id/restaurant_item_rating"
-        android:layout_marginLeft="4dp"
-        android:layout_toRightOf="@+id/restaurant_item_rating"
+        android:layout_marginStart="4dp"
+        android:layout_toEndOf="@+id/restaurant_item_rating"
         android:gravity="center_vertical"
         android:textColor="@color/greyDisabled"
         tools:text="(10)" />
@@ -57,7 +57,7 @@
         style="@style/AppTheme.Body1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/restaurant_item_name"
+        android:layout_alignStart="@+id/restaurant_item_name"
         android:layout_below="@+id/restaurant_item_rating"
         android:textColor="@color/greySecondary"
         tools:text="Italian" />
@@ -66,7 +66,7 @@
         android:id="@+id/restaurant_item_city_divider"
         style="@style/AppTheme.TextDivider"
         android:layout_alignTop="@+id/restaurant_item_category"
-        android:layout_toRightOf="@+id/restaurant_item_category"
+        android:layout_toEndOf="@+id/restaurant_item_category"
         android:text="@string/divider_bullet" />
 
     <TextView
@@ -75,7 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/restaurant_item_category"
-        android:layout_toRightOf="@+id/restaurant_item_city_divider"
+        android:layout_toEndOf="@+id/restaurant_item_city_divider"
         android:textColor="@color/greySecondary"
         tools:text="San Francisco" />
 
@@ -84,7 +84,7 @@
         style="@style/AppTheme.Caption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:textColor="@color/greySecondary"
         tools:text="$$$" />
 
