--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
+            android:focusable="true"
             android:elevation="8dp"
             android:foreground="?attr/selectableItemBackground">
 
@@ -56,8 +57,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="8dp"
-                    android:layout_toRightOf="@+id/button_filter"
+                    android:layout_marginStart="8dp"
+                    android:layout_toEndOf="@+id/button_filter"
                     android:orientation="vertical"
                     android:paddingBottom="8dp"
                     android:paddingTop="8dp">
@@ -85,7 +86,7 @@
                     android:id="@+id/button_clear_filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:padding="8dp"
                     android:tint="@color/greySecondary"
