--- a/app/src/main/res/layout/dialog_rating.xml
+++ b/app/src/main/res/layout/dialog_rating.xml
@@ -28,7 +28,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:hint="@string/hint_review" />
+        android:hint="@string/hint_review"
+        android:inputType="none" />
 
     <LinearLayout
         android:layout_width="match_parent"
