--- a/app/src/main/res/layout/activity_restaurant_detail.xml
+++ b/app/src/main/res/layout/activity_restaurant_detail.xml
@@ -55,8 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_above="@+id/restaurant_category"
             android:layout_alignStart="@+id/restaurant_name"
-            app:mrb_progressTint="@android:color/white"
-            app:mrb_secondaryProgressTint="@android:color/white" />
+            app:mrb_progressTint="@android:color/white" />
 
         <TextView
             android:id="@+id/restaurant_num_ratings"
